2007-08-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_expression parse_assignment_expression):
	Extend expression parsing to accept '=' as an assignment operator.

	* src/internal.h src/internal.c (f_assign): New internal function.
	src/eval.h src/eval.c:  table entry for f_assign()

	NEWS, docs/gnuplot.doc: Document assignment operator '='

2007-08-26  Ethan Merritt  <merritt@u.washington.edu>

	* config/config.cyg config/config.mgw config/config.nt config/config.os2
	config/config.oww config/config.wc config/config.dj2 configure.in 
	src/command.c src/datafile.c src/datafile.h src/eval.c src/eval.h
	src/gp_types.h src/internal.c src/internal.h src/mouse.c src/parse.c
	src/parse.h src/scanner.c src/set.c src/show.c src/standard.c src/term.c
	src/util.c src/util.h

	Remove the conditional compilation flag GP_STRING_VARS.  This means that
	string variables are always supported.

2007-08-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c src/gadgets.c (apply_pm3dcolor): Remove dead code.

	* src/plot.c src/plot2d.c src/plot3d.c src/term.c: Whitespace cleanup.

	* docs/titlepag.tex: Add URL for SourceForge site.

2007-08-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot):  Revise handling of the key title to match
	the 2D code.  Honor key title font, fix incomplete horizontal line in
	key box if there are multiple columns of key entries.

	* term/gd.trm (PNG_vector):  Better accounting of when the grid linetype
	needs to be refreshed. 
	Bug #1780449

2007-08-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon,
	gp_cairo_end_polygon): Introduce a small piece of code, unused, but
	illustrative of the way the "saturate" operator is used to draw pm3d
	polygons without seams.

	* src/wxterminal/gp_cairo.c (gp_cairo_fill_pattern): Do not use
	negative coordinates to create hash patterns. This gives corruption