@@ -1,5 +1,5 @@
 /*
- * $Id: eval.h,v 1.28 2007/08/28 05:56:30 sfeam Exp $
+ * $Id: eval.h,v 1.29 2007/08/28 06:13:07 sfeam Exp $
  */
 
 /* GNUPLOT - eval.h */
@@ -52,7 +52,7 @@
 /* HBB 20010725: Moved here, from parse.h */
 enum operators {
     /* keep this in line with table in eval.c */
-    PUSH, PUSHC, PUSHD1, PUSHD2, PUSHD,
+    PUSH, PUSHC, PUSHD1, PUSHD2, PUSHD, POP,
     CALL, CALLN, LNOT, BNOT, UMINUS,
     LOR, LAND, BOR, XOR, BAND, EQ, NE, GT, LT, GE, LE, PLUS, MINUS, MULT,
     DIV, MOD, POWER, FACTORIAL, BOOLE,
